feat: add test for gitbash service