@@ -1,16 +1,24 @@
 package com.tuneit.bash;
 
 import com.tuneit.GitBashService;
+import com.tuneit.gen.Variant;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.util.regex.Pattern;
 
 public class GitBashServiceDefault implements GitBashService {
     @Override
-    public String executeCommand(String line) {
+    public String poem(String poem, Variant variant) {
+        try (BufferedWriter bufferedReader = new BufferedWriter(new FileWriter(new File(variant.getStudDirName() + "/poem")))) {
+            bufferedReader.write(poem);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    @Override
+    public String executeCommand(String line, Variant variant) {
         try {
             if (line == null) {
                 return "Empty line";
@@ -21,7 +29,7 @@ public class GitBashServiceDefault implements GitBashService {
             }
 
             if (line.equals("cat poem")) {
-                return command("cat poem");
+                return command("cat poem", variant);
             }
             if (!line.substring(0, line.indexOf(" ")).equals("git")) {
                 return "Command not found";
@@ -30,15 +38,15 @@ public class GitBashServiceDefault implements GitBashService {
             String command = line.substring(line.indexOf(" ") + 1);
 
             if (Pattern.matches("checkout( -b)? (master|dev|quatrain[123])", command)) {
-                return command(line);
+                return command(line, variant);
             } else if (Pattern.matches("merge (master|dev|quatrain[123])", command)) {
-                return command(line);
+                return command(line, variant);
             } else if (Pattern.matches("commit -m \"[A-z0-9 ]*?\"", command)) {
-                return command(line);
+                return command(line, variant);
             } else if (Pattern.matches("add (poem|\\.)", command)) {
-                return command(line);
+                return command(line, variant);
             } else {
-                return easyCommand(command);
+                return easyCommand(command, variant);
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -46,33 +54,34 @@ public class GitBashServiceDefault implements GitBashService {
         }
     }
 
-    private String easyCommand(String command) throws IOException {
+    private String easyCommand(String command, Variant variant) throws IOException {
         switch (command) {
             case "status":
-                return command("git status");
+                return command("git status", variant);
             case "log":
-                return command("git --no-pager log");
+                return command("git --no-pager log", variant);
             case "log --graph":
-                return command("git --no-pager log --graph");
+                return command("git --no-pager log --graph", variant);
             case "diff":
-                return command("git --no-pager diff");
+                return command("git --no-pager diff", variant);
             case "reset --hard HEAD":
-                return command("git reset --hard HEAD");
+                return command("git reset --hard HEAD", variant);
             case "branch":
-                return command("git branch");
+                return command("git branch", variant);
             default:
                 return "Command not found";
         }
     }
 
-    private String command(String command) throws IOException {
-        Process status = Runtime.getRuntime().exec(command, new String[]{}, new File("test1"));
+    private String command(String command, Variant variant) throws IOException {
+        Process status = new ProcessBuilder().command("bash", "-c", command).directory(new File(variant.getStudDirName())).start();
+
         BufferedReader reader = new BufferedReader(new InputStreamReader(status.getInputStream()));
         StringBuilder result = new StringBuilder();
         String resultLine = reader.readLine();
         if (resultLine != null) {
             while (resultLine != null) {
-                result.append(resultLine);
+                result.append(resultLine).append("\n");
                 resultLine = reader.readLine();
             }
         }
@@ -81,7 +90,7 @@ public class GitBashServiceDefault implements GitBashService {
         resultLine = reader.readLine();
         if (resultLine != null) {
             while (resultLine != null) {
-                result.append(resultLine);
+                result.append(resultLine).append("\n");
                 resultLine = reader.readLine();
             }
         }
